fix: fixed bottom gap inside fraction tool symbol

--- a/views/js/pciCreator/ims/mathEntryInteraction/runtime/scss/mathEntryInteraction.scss
+++ b/views/js/pciCreator/ims/mathEntryInteraction/runtime/scss/mathEntryInteraction.scss
@@ -245,8 +245,9 @@ $defaultGapWidth: 30;
                 }
             }
 
-            #horizontal-fraction-tool{
+            #horizontal-fraction-tool {
                 padding: 0 16px;
+                line-height: 15.5px;
                 font-size: 12px !important;
             }
         }
